change button text at homepage

--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -15,7 +15,7 @@
                         <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-generic" data-slide-to="1" class=""></li>
                     </ol>
-                    <a class="btn btn-block btn-primary btn-flat btn-slide hidden-xs">Start a course map!</a>
+                    <a class="btn btn-block btn-primary btn-flat btn-slide hidden-xs">Start Collaborating!</a>
 
                     <div class="carousel-inner">
                         <div class="item active">
