--- a/views/admin-lte/catalogs/rightMenu.ejs
+++ b/views/admin-lte/catalogs/rightMenu.ejs
@@ -1,12 +1,21 @@
 
 <!-- /.modal-content -->
-<div id="rightClick" class="hide" ng-controller="RightClickMenuController as rc" >
+<div id="rightClick" class="hide">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
                 <ul class="nav nav-pills nav-stacked">
                     <li class="header rightMenu"></li>
-                    <li><a href="javascript:;" ng-click="createTopic('Web Tech', $event)"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createMainTopic', {topic: 'Web Tech'})"> Create Topic </a></li>
                 </ul>
             </div>
         </div>
