--- a/views/admin-lte/catalogs/course.ejs
+++ b/views/admin-lte/catalogs/course.ejs
@@ -105,6 +105,7 @@
 <script src="/d3/d3.min.js"></script>
 <% include ../jsfooter %>
 <script src="/jquery/jquery-ui.min.js"></script>
+<script src="/jquery/jquery.ui.touch-punch.min.js"></script>
 <script>
 $(document).ready(function(){
 });
