--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -8,6 +8,7 @@
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link href="/gridstack/gridstack.min.css" rel="stylesheet" type="text/css" />
     <link rel="icon" href="/favicon.png" type="image/png" />
 
     <!-- Themes -->
