--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -1,13 +1,6 @@
 <% include header %>
 <div class="wrapper">
 
-    <style type="text/css">
-        .grid-stack-item-content {
-            color: #2c3e50;
-            text-align: center;
-            background-color: #18bc9c;
-        }
-    </style>
     <!-- Header Navbar -->
     <% include mainMenu %>
 
@@ -42,7 +35,7 @@
                                             class="ionicons ion-ios-gear"></i> Account Settings</a></li>
                                     <li><a href="#" title="Turn on or off some features"><i
                                             class="ionicons ion-toggle"></i> Plugins</a></li>
-                                    <li><a href="#" title="Add or remove dashboard widgets"><i
+                                    <li><a href="#/apps/gallery" title="Add or remove dashboard widgets" data-toggle="modal" data-target="#modalAppGallery"><i
                                             class="ionicons ion-android-apps"></i> Widgets Store</a></li>
                                     <% if(user.roles == 'admin'){ %>
                                     <li><a href="/cm-admin/" title="admin"> Admin Panel</a></li>
@@ -54,20 +47,10 @@
                     </div>
                     <!-- main user menu end -->
 
-                    <!--
-                                        <div class="  col-sm-6 col-md-3">
-
-                                                    <div ng-include src="'/widgets/blankBox'" onload="initWidgetButton()"></div>
-                                                    <button class="btn btn-block btn-default btn-flat col-md-12 widgetEmpty">
-                                                        <i class="ionicons ion-ios-plus-outline"></i>
-                                                    </button>
-
-                                        </div>
-                    -->
                     <div class="grid-stack col-sm-6 col-md-10">
                         <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-no-resize="yes" data-gs-locked="yes">
                             <div class="grid-stack-item-content">
-                                <div ng-include src="'/widgets/blankBox'" onload="initWidgetButton()"></div>
+                                <div ng-include src="'/my-course/my-following-courses'" onload="initWidgetButton()"></div>
                             </div>
                         </div>
                         <div class="grid-stack-item" data-gs-x="4" data-gs-y="0" data-gs-width="4" data-gs-no-resize="yes" data-gs-locked="yes">
@@ -81,7 +64,17 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row">
+
+                        <div class="modal" id="modalAppGallery" tabindex="-1" role="dialog" aria-labelledby="modalAppGallery" aria-hidden="true">
+                            <div ng-view></div>
+                        </div>
+
+                    </div>
                 </div>
+
+
             </div>
         </section>
         <!-- /.content -->
@@ -98,7 +91,7 @@
 <script src="/gridstack/gridstack.js"></script>
 
 <script>
-    $(function () {
+    $(function initiateDraggableGrid() {
         var options = {
             cell_height: 400,
             vertical_margin: 10,
@@ -127,6 +120,21 @@
             console.log(node.x + " ++ " + node.y);
         });
     });
+
+    app.config(['$routeProvider',
+        function($routeProvider) {
+            $routeProvider.
+                    when('/apps/gallery', {
+                        templateUrl: '/apps/gallery/user-profile',
+                        controller: 'WidgetListController'
+                    }).
+                    otherwise({
+                        redirectTo: '/'
+                    });
+        }]);
+
+
+
 </script>
 
 <% include footer %>
