--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -3,6 +3,7 @@
 <script src="/jquery/jquery.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/angular/angular.min.js" type="text/javascript"></script>
+<script src="/xeditable/xeditable.min.js" type="text/javascript"></script>
 <script src="/angular/angular-route.min.js"></script>
 <script src="/angular/angular-resource.min.js"></script>
 <script src="/angular/courseMapper.js"></script>
