--- a/views/admin-lte/catalogs/courses.ejs
+++ b/views/admin-lte/catalogs/courses.ejs
@@ -66,6 +66,8 @@
                 </div>
             </div>
         </section>
+
+        <br class="clear">
         <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
